# hollowknight-dependencies

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh
client/: bun.lockb  bunfig.toml  eslint.config.js  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/src/: ApiInterface.ts  App.tsx  context.tsx  index.css  models.ts
client/src/components/: ChecklistColumn.css  ChecklistColumn.tsx  DependencyChecklist.css  DependencyChecklist.tsx  ItemDetailCard.css  ItemDetailCard.tsx  Popup.css  Popup.tsx
client/src/components/DependencyChecklist/: ChecklistColumn.tsx  index.tsx
client/src/contexts/: ProgressionItemsMapContext.ts  ProgressionItemsMapContextProvider.tsx
hollowknight_dependencies/: all-progression-items.yaml  api_deps.py  db_interface.py  init_db.sql  models.py  prerequisites.py  router_api.py  server.py
tests/: test_models.py  test_prerequisites.py
